--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: rgb(243, 247, 250);;
+    background: rgb(243, 247, 250);
     padding: 0 15px;
 }
 
