--- a/src/containers/TicketsContainer/TicketsContainer.scss
+++ b/src/containers/TicketsContainer/TicketsContainer.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .tickets {
     max-width: 768px;
     margin: 0 auto;
@@ -17,6 +19,30 @@
 
         &__content {
             width: 65%;
+
+            &__more-button {
+                font-weight: 600;
+                font-size: 12px;
+                letter-spacing: 0.5px;
+                line-height: 20px;
+                text-transform: uppercase;
+                border: none;
+                color: #fff;
+                padding: 15px 0;
+                border-radius: 5px;
+                width: 100%;
+                background-color: $blueColor;
+                cursor: pointer;
+                transition: background-color 0.2s ease;
+
+                &:hover {
+                    background-color: rgba(33, 150, 243, 0.9);
+                }
+
+                &:active {
+                    background-color: rgba(15, 125, 211, 0.9);
+                }
+            }
         }
     }
 }
