--- a/src/containers/TicketsContainer/TicketsContainer.scss
+++ b/src/containers/TicketsContainer/TicketsContainer.scss
@@ -19,6 +19,7 @@
 
         &__content {
             width: 65%;
+            position: relative;
 
             &__more-button {
                 font-weight: 600;
