--- a/src/components/UI/LineLoading/LineLoading.scss
+++ b/src/components/UI/LineLoading/LineLoading.scss
@@ -20,6 +20,7 @@ $duration: 1.5s;
         display: flex;
         align-items: center;
         height: 40px;
+
         &__text {
             font-weight: 500;
             margin: 0 3px 0 10px;
@@ -30,8 +31,8 @@ $duration: 1.5s;
             align-self: flex-end;
             font-size: 22px;
             font-family: Tahoma, sans-serif;
-            color : #fff;
-            transform: translate(0% , -50%);
+            color: #fff;
+            transform: translate(0%, -50%);
             padding-left: 5px;
 
             &--1 {
@@ -95,7 +96,11 @@ $duration: 1.5s;
 
                 &--2 {
                     opacity: 1;
-                    background-image: linear-gradient(to right, $blueColor, #032038);
+                    background-image: linear-gradient(
+                                    to right,
+                                    $blueColor,
+                                    #032038
+                    );
                     animation: kf_loading_line_inner--2 $duration cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
                     border-radius: 5px;
                     overflow: hidden;
@@ -117,7 +122,6 @@ $duration: 1.5s;
     }
 }
 
-
 @keyframes kf_loading_line_inner--1 {
     0% {
         transform: scaleX(0);
@@ -129,7 +133,6 @@ $duration: 1.5s;
         transform: scaleX(1);
     }
 }
-
 
 @keyframes kf_loading_line_inner--2 {
     0% {
@@ -147,11 +150,10 @@ $duration: 1.5s;
 }
 
 @keyframes animation-point {
-
-    0%{
-        color: #fff
+    0% {
+        color: #fff;
     }
-    100%{
-        color : #2a2a2a;
+    100% {
+        color: #2a2a2a;
     }
 }
