--- a/src/components/UI/NoTickets/NoTickets.scss
+++ b/src/components/UI/NoTickets/NoTickets.scss
@@ -32,7 +32,8 @@
             right: 0;
         }
 
-        &:after, &:before {
+        &:after,
+        &:before {
             position: absolute;
             top: 0;
             color: $blueColor;
@@ -62,7 +63,8 @@
 }
 
 @keyframes opacity {
-    0%, 100% {
+    0%,
+    100% {
         opacity: 0;
     }
     50% {
@@ -71,13 +73,17 @@
 }
 
 @keyframes change {
-    0%, 12.66%, 100% {
+    0%,
+    12.66%,
+    100% {
         transform: translate3d(0, 0, 0);
     }
-    16.66%, 45.98% {
+    16.66%,
+    45.98% {
         transform: translate3d(0, -50%, 0);
     }
-    49.98%, 95.96% {
+    49.98%,
+    95.96% {
         transform: translate3d(0, 0, 0);
     }
 }
