--- a/src/components/UI/NoTickets/NoTickets.scss
+++ b/src/components/UI/NoTickets/NoTickets.scss
@@ -6,14 +6,13 @@
     left: 50%;
     transform: translate(-50%, 0);
     height: 160px;
-    overflow: hidden;
     width: 80%;
-    font-family: 'Lato', sans-serif;
     font-size: 25px;
     line-height: 40px;
     color: $blueColor;
+    font-family: "Gill Sans", sans-serif;
 
-    &__container {
+    &__container_choose {
         font-weight: 600;
         letter-spacing: 1px;
         overflow: hidden;
@@ -57,6 +56,22 @@
                 text-align: center;
                 line-height: 40px;
                 margin: 0;
+            }
+        }
+    }
+    &__container_not-found {
+        &__text {
+            text-align: center;
+            font-weight: 600;
+            margin: 0 0 20px;
+            color: #15bde5;
+        }
+
+        &__image-block {
+            text-align: center;
+            &__image {
+                width: 50%;
+                height: 50%;
             }
         }
     }
