--- a/src/components/UI/TemporaryMessage/TemporaryMessage.scss
+++ b/src/components/UI/TemporaryMessage/TemporaryMessage.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .message {
     position: absolute;
     top: 15%;
@@ -8,7 +10,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     padding-bottom: 5px;
-    color: #036dc3;
+    color: $blueColor;
 }
 
 .fade-up {
