--- a/src/components/UI/NoTickets/NoTickets.scss
+++ b/src/components/UI/NoTickets/NoTickets.scss
@@ -10,7 +10,7 @@
     font-size: 25px;
     line-height: 40px;
     color: $blueColor;
-    font-family: "Gill Sans", sans-serif;
+    font-family: 'Gill Sans', sans-serif;
 
     &__container_choose {
         font-weight: 600;
