--- a/src/components/TabsComponent/TabsComponent.scss
+++ b/src/components/TabsComponent/TabsComponent.scss
@@ -1,6 +1,12 @@
+@import '../../styles/variables';
+
 .tabs {
     display: flex;
     align-items: center;
     width: 100%;
     margin-bottom: 20px;
+
+    @include for-mobile-md {
+        flex-wrap: wrap;
+    }
 }
