--- a/src/components/UI/LineLoading/LineLoading.scss
+++ b/src/components/UI/LineLoading/LineLoading.scss
@@ -11,10 +11,17 @@ $duration: 1.5s;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 94%;
     height: 100%;
     border-radius: 5px;
     overflow: hidden;
+    @include for-mobile-lg {
+        top: 12.8%;
+    }
+
+    @include for-mobile-md {
+        top: 13.3%;
+    }
 
     &__text-block {
         display: flex;
@@ -61,6 +68,10 @@ $duration: 1.5s;
         border-radius: 5px;
         overflow: hidden;
 
+        @include for-mobile-lg {
+            height: 5px;
+        }
+
         &__line {
             position: relative;
             top: 0;
@@ -70,8 +81,7 @@ $duration: 1.5s;
             width: 100%;
             height: 100%;
             transform-origin: 100% 0;
-            animation: kf_loading_line $duration
-                cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
+            animation: kf_loading_line $duration cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
             border-radius: 5px;
             overflow: hidden;
 
@@ -90,8 +100,7 @@ $duration: 1.5s;
                 &--1 {
                     opacity: 1;
                     background-color: $blueColor;
-                    animation: kf_loading_line_inner--1 $duration
-                        cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
+                    animation: kf_loading_line_inner--1 $duration cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
                     border-radius: 5px;
                     overflow: hidden;
                 }
@@ -99,12 +108,11 @@ $duration: 1.5s;
                 &--2 {
                     opacity: 1;
                     background-image: linear-gradient(
-                        to right,
-                        $blueColor,
-                        #014478
+                                    to right,
+                                    $blueColor,
+                                    #014478
                     );
-                    animation: kf_loading_line_inner--2 $duration
-                        cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
+                    animation: kf_loading_line_inner--2 $duration cubic-bezier(0.645, 0.045, 0.355, 1) 0s infinite;
                     border-radius: 5px;
                     overflow: hidden;
                 }
