--- a/src/containers/TicketsContainer/TicketsContainer.scss
+++ b/src/containers/TicketsContainer/TicketsContainer.scss
@@ -12,13 +12,27 @@
         gap: 20px;
         margin-top: 20px;
 
+        @include for-mobile-lg {
+            flex-direction: column;
+        }
+
         &__filters {
             width: 30%;
+            @include for-mobile-lg {
+                width: 100%;
+            }
         }
 
         &__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 65%;
             position: relative;
+
+            @include for-mobile-lg {
+                width: 100%;
+            }
 
             &__more-button {
                 font-weight: 600;
@@ -34,6 +48,7 @@
                 background-color: $blueColor;
                 cursor: pointer;
                 transition: background-color 0.2s ease;
+                margin-bottom: 15px;
 
                 &:hover {
                     background-color: rgba(33, 150, 243, 0.9);
