--- a/src/components/UI/TemporaryMessage/TemporaryMessage.scss
+++ b/src/components/UI/TemporaryMessage/TemporaryMessage.scss
@@ -1,9 +1,9 @@
 @import '../../../styles/variables';
 
 .message {
-    position: absolute;
-    top: 15%;
-    left: 38%;
+    position: relative;
+    margin-bottom: -25px;
+    top: 16%;
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 18px;
@@ -14,15 +14,6 @@
 
     @include for-mobile-lg {
         top: 11%;
-        left: 26%;
-    }
-
-    @include for-mobile-md {
-        left: 16%;
-    }
-
-    @include for-mobile-sm {
-        left: 2%;
     }
 }
 
